# hello-cli

./: .gitignore  README.md
.github/: dependabot.yml
bk/golang/: README.md  go.mod  go.sum
bk/rust/: README.md
bk/rust/src/: main.rs
cpp/: CMakeLists.txt
cpp/src/: hello.cpp
diagram/: ici.drawio
doc/: rwc-design.graffle
go/: README.md
golang/: README.md  go.mod  go.sum
golang/cli/: go.sum
golang/common/: protocol.go
golang/requester/: fire-and-forget.go  request-channel.go  request-response.go  request-stream.go
golang/responder/: rsocket-acceptor.go
hello-cli-cpp/: CMakeLists.txt  README.md  hello.cpp
hello-cli-cpp/src/: hello.cpp
hello-cli-go/: hello.go
hello-cli-java/: README.md  pom.xml
hello-cli-java/src/main/java/org/feuyeux/cli/: Hello.java
hello-cli-rust/src/: main.rs
ici-java/: README.md  build.sh  pom.xml  run.sh
ici-java/src/main/java/org/feuyeux/cli/: HelloCli.java  SpaceProcessor.java  StatusProcessor.java  TimeProcessor.java
ici-python/: README.md  hello_ici.py  requirements.txt
java/: README.md
java/cli/: pom.xml
java/pojo/: pom.xml
java/pojo/src/main/java/org/feuyeux/rsocket/cli/pojo/: HelloRequest.java  HelloRequests.java  HelloResponse.java
java/requester/: pom.xml
java/requester/src/main/java/org/feuyeux/rsocket/cli/: HelloController.java  HelloRSocketAdapter.java
java/responder/: pom.xml
java/responder/src/main/java/org/feuyeux/rsocket/cli/: HelloController.java
rust/: Cargo.toml
rwc-go/: go.mod
rwc-java/requester/: README.md  pom.xml
rwc-java/responder/: pom.xml
rwc-rust/src/: ownership.rs
